Node-API/nodeapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapi
  labels:
    app: nodeapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapi
  template:
    metadata:
      labels:
        app: nodeapi
    spec:
      containers:
        - name: nodeapi
          image: dockerh1234/node-api:latest
