Node-API/nodeapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapi-service
spec:
  type: LoadBalancer
  selector:
    app: nodeapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
